| Summary: | ASTERISK-28032: Realtime queuemembers are not updated during retry phase | ||
| Reporter: | laszlovl (lvl) | Labels: | |
| Date Opened: | 2018-09-03 06:27:33 | Date Closed: | 2018-09-07 04:48:57 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_queue |
| Versions: | 15.5.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Currently, realtime queuemembers are updated after a queue caller's call attempt, but before waiting on the "retry" period to pass. This means that any updates to the realtime members occuring during the retry phase, will not yet be used for the next call attempt. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-09-03 06:27:35.231-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2018-09-07 04:48:59.592-0500 Change 10052 merged by Joshua Colp: app_queue: Update realtime queuemembers after wait_a_bit(), not before [https://gerrit.asterisk.org/10052|https://gerrit.asterisk.org/10052] By: Friendly Automation (friendly-automation) 2018-09-07 04:49:10.395-0500 Change 10054 merged by Joshua Colp: app_queue: Update realtime queuemembers after wait_a_bit(), not before [https://gerrit.asterisk.org/10054|https://gerrit.asterisk.org/10054] By: Friendly Automation (friendly-automation) 2018-09-07 04:49:18.352-0500 Change 10053 merged by Joshua Colp: app_queue: Update realtime queuemembers after wait_a_bit(), not before [https://gerrit.asterisk.org/10053|https://gerrit.asterisk.org/10053] By: Friendly Automation (friendly-automation) 2018-09-07 04:49:31.480-0500 Change 10036 merged by Joshua Colp: app_queue: Update realtime queuemembers after wait_a_bit(), not before [https://gerrit.asterisk.org/10036|https://gerrit.asterisk.org/10036] | ||